Fixed the overflow problem, itemDesc wasn't scrollable because it was behind cart, changed z-index depending on cart animation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -375,7 +375,11 @@ width: 127px;
   margin: 180px 24px;
   opacity: 0.9;
   color:white;
+  z-index: 2;
 }
+
+
+
 
 #grabIt
 {
